--- a/public_html/projects.html
+++ b/public_html/projects.html
@@ -21,6 +21,6 @@ and open the template in the editor.
                  <p>This is my new projects page.</p>
             </nav>
         </header>
-        
+        <h1>Projects I have done</h1>
     </body>
 </html>
