--- a/public_html/projects.html
+++ b/public_html/projects.html
@@ -22,5 +22,6 @@ and open the template in the editor.
             </nav>
         </header>
         <h1>Projects I have done</h1>
+        <h2>I am currently working on a portfolio website where I use HTML and CSS.</h2>
     </body>
 </html>
