Added links etc.
Added links to CSS and HTML, added projects description and changed some things in the technology page. Changes About Me image and added image in the Technology Page.

--- a/public_html/projects.html
+++ b/public_html/projects.html
@@ -18,10 +18,16 @@ and open the template in the editor.
                  <!--This makes the current link not have an underline.-->
                  <a id="current-link" href="projects.html">Projects</a>
                  <a href="technology.html">Technology</a>
-                 <p>This is my new projects page.</p>
             </nav>
         </header>
-        <h1>Projects I have done</h1>
-        <h2>I am currently working on a portfolio website where I use HTML and CSS.</h2>
+        <nav>
+        <h1 class="uppercase">Projects</h1>
+        <h2>I am currently working on a portfolio website.</h2>
+        <p>My first assignment in Computer Science class is to create
+           a portfolio website using HTML and CSS.
+           <br>This webstie includes an <a href='index.html'>About</a> page,
+           a <a href="projects.html">Projects</a> page, 
+           and a <a href="technology.html">Technology</a> page.
     </body>
+        </nav>
 </html>
