Added screenshot to projects
Added a screenshot to my projects page and resized the image using ID selectors.

--- a/public_html/projects.html
+++ b/public_html/projects.html
@@ -28,6 +28,8 @@ and open the template in the editor.
            <br>This webstie includes an <a href='index.html'>About</a> page,
            a <a href="projects.html">Projects</a> page, 
            and a <a href="technology.html">Technology</a> page.
-    </body>
+        <h3>Here is a screenshot of my current <a href='index.html'>About</a> page.</h3>
+        <img id='aboutme' src='images/about-me-screenshot.png'>
         </nav>
+        </body>
 </html>
