Made final changes for advanced users
Changed the font, added videos, used a picture as a link, removed about me picture.

--- a/public_html/projects.html
+++ b/public_html/projects.html
@@ -29,7 +29,7 @@ and open the template in the editor.
            a <a href="projects.html">Projects</a> page, 
            and a <a href="technology.html">Technology</a> page.
         <h3>Here is a screenshot of my current <a href='index.html'>About</a> page.</h3>
-        <img id='aboutme' src='images/about-me-screenshot.png'>
+        <a href='index.html'><img id='aboutme' src='images/about-me-screenshot-new.png' border="5"></a>
         </nav>
         </body>
 </html>
